Finished Aquarium Page and Started CSS on Aquarium Page

--- a/Aquariums.html
+++ b/Aquariums.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="aquarium.css" type="text/css" rel="stylesheet">
     <title>Stadium Arcadium</title>
 </head>
 <body>
@@ -12,8 +13,8 @@
     Fundamentals of Owning an Aquarium
 </h1>
 <ul>
-    <li><h2><a>Tank Supplies</a></h2></li>
-    <li>
+    <li class="noBullet"><h2><a>Tank Supplies</a></h2></li>
+    <li class="noBullet">
         <ul>
             <li>
                 <strong>Fish Tank</strong> - When buying a fishtank, there are several things that you should consider
@@ -122,12 +123,12 @@
             </li>
         </ul>
     </li>
-    <li><h2><a href="http://www.fishkeeping.co.uk/articles_51/fishless-cycling-article.htm">Cycling a Tank</a></h2></li>
-    <li>
+    <li class="noBullet"><h2><a href="http://www.fishkeeping.co.uk/articles_51/fishless-cycling-article.htm">Cycling a Tank</a></h2></li>
+    <li class="noBullet">
         <ul>
             <li>
                 Cycling a fishtank is the act of creating a healthy bacterial environment within the fishtank,
-                such that ammonia waste produced by the organisms within the tank is properly handled. This cycle of
+                so that ammonia waste produced by organisms within the tank is properly handled. This cycle of
                 breaking down
                 ammonia is known as the <i>Nitrogen Cycle</i>.
             </li>
@@ -148,8 +149,8 @@
             </li>
         </ul>
     </li>
-    <li><h2><a>Cleaning a Tank</a></h2></li>
-    <li>
+    <li class="noBullet"><h2><a>Cleaning a Tank</a></h2></li>
+    <li class="noBullet">
         <ul>
             <li>
                 Cleaning a tank is essential to ensuring that the water your pets live in does not become contaminated
@@ -186,8 +187,8 @@
             </li>
         </ul>
     </li>
-    <li><h2><a>Freshwater vs Saltwater Tanks</a></h2></li>
-    <li>
+    <li class="noBullet"><h2><a>Freshwater vs Saltwater Tanks</a></h2></li>
+    <li class="noBullet">
         <ul>
             <li>
                 This is an extremely complicated topic that I have very limited knowledge about, so I will keep it
@@ -204,9 +205,9 @@
             </li>
         </ul>
     </li>
-    <li><h2><a href="http://www.liveaquaria.com/general/general.cfm?general_pagesid=295">Tankmate Compatability</a></h2>
+    <li class="noBullet"><h2><a href="http://www.liveaquaria.com/general/general.cfm?general_pagesid=295">Tankmate Compatability</a></h2>
     </li>
-    <li>
+    <li class="noBullet">
         <ul>
             <li>
                 Just like humans, some fish/invertebrates do not get along with one another. In a fishtank where
@@ -233,13 +234,13 @@
 </ul>
 <h1>Personal Favorite Tank Inhabitants</h1>
 <ul>
-    <li class="taHeader"><h3>African Dwarf Frog - genus <i>Hymenochirus</i></h3></li>
-    <li>
+    <li class="noBullet"><h3>African Dwarf Frog - genus <i>Hymenochirus</i></h3></li>
+    <li class="noBullet">
         <ul>
-            <li class="img"><a href="https://upload.wikimedia.org/wikipedia/commons/2/23/African_dwarf_frog.jpg"><img
+            <li class="noBullet"><a href="https://upload.wikimedia.org/wikipedia/commons/2/23/African_dwarf_frog.jpg"><img
                     src="https://upload.wikimedia.org/wikipedia/commons/2/23/African_dwarf_frog.jpg" height="200"
                     width="300" alt=" Picture Unavailable"></a></li>
-            <li><p>These freshwater frogs are both super interesting to look at and super interesting to interact with.
+            <li class="noBullet"><p>These freshwater frogs are both super interesting to look at and super interesting to interact with.
                 Because they are fully aquatic, only needing to come up and get air from time to time, they work well in
                 freshwater
                 tanks. They are also a nice breath of fresh air from the typical tank inhabitants, which are usually
@@ -247,49 +248,38 @@
                 invertebrates.</p></li>
         </ul>
     </li>
-    <li class="taHeader"><h3>Harlequin Shrimp - <i>Hymenocera picta</i></h3></li>
-    <li>
+    <li class="noBullet"><h3>Harlequin Shrimp - <i>Hymenocera picta</i></h3></li>
+    <li class="noBullet">
         <ul>
-            <li class="img"><a href="https://c1.staticflickr.com/1/98/233840131_000ea85ce0_b.jpg"><img
+            <li class="noBullet"><a href="https://c1.staticflickr.com/1/98/233840131_000ea85ce0_b.jpg"><img
                     src="https://c1.staticflickr.com/1/98/233840131_000ea85ce0_b.jpg" height="200" width="300"
                     alt=" Picture Unavailable"></a></li>
-            <li><p>The harlequin shrimp is an awesome looking saltwater shrimp whose diet consists of strictly one animal :
+            <li class="noBullet"><p>The harlequin shrimp is an awesome looking saltwater shrimp whose diet consists of strictly one animal :
             starfish. This makes the harlequin shrimp incredibly hard to house and maintain, since you also have to actively
                 grow a food supply in another tank (starfish are insanely expensive to buy).</p></li>
         </ul>
     </li>
-    <li class="taHeader"><h3>Pea Puffer - <i>Carinotetraodon travancoricus</i></h3></li>
-    <li>
+    <li class="noBullet"><h3>Pea Puffer - <i>Carinotetraodon travancoricus</i></h3></li>
+    <li class="noBullet">
         <ul>
-            <li class="img"><a href="https://upload.wikimedia.org/wikipedia/commons/d/d4/Dwarf-Pufferfish.jpeg"><img
+            <li class="noBullet"><a href="https://upload.wikimedia.org/wikipedia/commons/d/d4/Dwarf-Pufferfish.jpeg"><img
                     src="https://upload.wikimedia.org/wikipedia/commons/d/d4/Dwarf-Pufferfish.jpeg" height="200"
                     width="300" alt=" Picture Unavailable"></a></li>
-            <li><p>Having caught actual puffer fish before off of the coast of North Carolina, I think its really cool
+            <li class="noBullet"><p>Having caught (and released) actual puffer fish before off of the coast of North Carolina, I think its really cool
             that there is a mini version of what is essentially the same animal. I think the dorky little things are so
             adorable.</p></li>
         </ul>
     </li>
-    <li class="taHeader"><h3>Bamboo Shrimp - <i>Atyopsis</i></h3></li>
-    <li>
+    <li class="noBullet"><h3>Bamboo Shrimp - <i>Atyopsis</i></h3></li>
+    <li class="noBullet">
         <ul>
-            <li class="img"><a href="https://upload.wikimedia.org/wikipedia/commons/7/7e/Bambooshrimpdriftwd.JPG"><img
+            <li class="noBullet"><a href="https://upload.wikimedia.org/wikipedia/commons/7/7e/Bambooshrimpdriftwd.JPG"><img
                     src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Bambooshrimpdriftwd.JPG" height="200"
                     width="300" alt=" Picture Unavailable"></a></li>
-            <li><p>These dudes are cool, largely because they actually eat by waving their fans through the water and catching
+            <li class="noBullet"><p>These dudes are cool, largely because they actually eat by waving their fans through the water and catching
             debris and small bacteria. They are also very amicable and fit in well with most community shrimp tanks.</p></li>
         </ul>
     </li>
-</ul>
-<h1>Personal Favorite Tank Plants</h1>
-<ul>
-    <li class="tpHeader"><h3></h3></li>
-    <img src="" alt=" Picture Unavailable">
-    <li class="tpHeader"><h3></h3></li>
-    <img src="" alt=" Picture Unavailable">
-    <li class="tpHeader"><h3></h3></li>
-    <img src="" alt=" Picture Unavailable">
-    <li class="tpHeader"><h3></h3></li>
-    <img src="" alt=" Picture Unavailable">
 </ul>
 <h1>About me</h1>
 <p>Hello, my name is Jarod Cahoon, and I attend Duke University. I grew up in eastern North Carolina, and consequently
@@ -301,5 +291,12 @@
     available place which provides for me similar feelings that going to the beach did, namely : a sense of personal
     responsibility,
     respect for nature, and a place for introspective thought about the nature of life, and my place within it.</p>
+
+<hr/>
+<footer>
+    <ul class="footer">
+        <li>jarod.cahoon@duke.edu</li>
+    </ul>
+</footer>
 </body>
 </html>
