--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 <header>
-    <h1 class="top">The Wizarding Wordl of Web Development</h1>
+    <h1 class="top">The Wizarding World of Web Development</h1>
     <h2 class="top">Author: Jarod Cahoon</h2>
     <h2 class="top"><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">A link to the CS290 Webpage</a></h2>
 </header>
