Completed the CSS for Aquarium page

--- a/Aquariums.html
+++ b/Aquariums.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="aquarium.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
     <title>Stadium Arcadium</title>
 </head>
 <body>
