Finished CSS for Aquariums page, moving onto main page now

--- a/Aquariums.html
+++ b/Aquariums.html
@@ -295,7 +295,7 @@
 
 <hr/>
 <footer>
-    <ul class="footer">
+    <ul id="footerlist">
         <li>jarod.cahoon@duke.edu</li>
     </ul>
 </footer>
