--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="main.css" type="text/css" rel="stylesheet">
     <title>The Life of Pablo</title>
 </head>
 
