Gave some okay CSS for index page

--- a/index.html
+++ b/index.html
@@ -19,29 +19,29 @@
         <li>Hello, my name is Jarod Cahoon!</li>
         <li>I am from Grantsboro, North Carolina.</li>
         <li>I am a Sophomore, and will graduate in 2020</li>
-        <li><h3>Questions:</h3></li>
-        <li>
+        <li id="questionprompt"><h3>Questions:</h3></li>
+        <li id="questionaire">
             <ul>
-                <li><strong>When did you first start using a computer?</strong></li>
+                <li class="question"><strong>When did you first start using a computer?</strong></li>
                 <li class="answer">I first starting using a computer when I was around 6 or 7, when my dad would let me
                     sit on his lap and drag the cards across the screen when he won in Solitaire.
                 </li>
-                <li><strong>What kinds of computers have you used?</strong></li>
+                <li class="question"><strong>What kinds of computers have you used?</strong></li>
                 <li class="answer">I have used everything from an only MacIntosh we had at school to the computer I just
                     rebuilt a couple of weeks ago.
                 </li>
-                <li><strong>How do you use computers on a daily basis?</strong></li>
+                <li class="question"><strong>How do you use computers on a daily basis?</strong></li>
                 <li class="answer">I use computers to do everything from checking my email, to playing video games, to
                     browsing to net on my phone.
                 </li>
-                <li><strong>What do you think a computer scientist does on a daily basis?</strong></li>
+                <li class="question"><strong>What do you think a computer scientist does on a daily basis?</strong></li>
                 <li class="answer">I think this is kind of a loaded question because I feel that what qualifies as a
                     "computer scientist" is very broad and contentious.
                     I think that people who would consider themselves "computer scientists" do everything from building
-                    websites to studying graphs, to developing cryptographic algorithsm.
+                    websites to studying graphs, to developing cryptographic algorithms.
                     I feel that the field is very broad.
                 </li>
-                <li><strong>What event(s) made you interested in studying computer science and this course in
+                <li class="question"><strong>What event(s) made you interested in studying computer science and this course in
                     particular?</strong></li>
                 <li class="answer">At a young age I kind of wanted to know how a computer worked, and realized that I
                     couldn't rely on my somewhat Luddite parents to provide answers for me.
@@ -49,18 +49,18 @@
                     computer science courses, I still knew absolutely nothing about how the internet
                     really works, or people interact with the internet.
                 </li>
-                <li><strong>What kinds of skills are required to code different parts of a web site?</strong></li>
+                <li class="question"><strong>What kinds of skills are required to code different parts of a web site?</strong></li>
                 <li class="answer">I honestly have no clue, but from what I have done in this assignment thus far, it
                     seems like a lot of a creativity and understanding of what you want to do with the
                     layout of the website before you even start using it.
                 </li>
-                <li><strong>How do you see yourself using computers in the future?</strong></li>
+                <li class="question"><strong>How do you see yourself using computers in the future?</strong></li>
                 <li class="answer">Though this might be kind of a sad answer, I feel that the reality of the future is
                     that our existence is inextricable from the use of computers. It feels like the
                     technological revolution has barely just began, but we still can barely go to the kitchen to get ice
                     cubes for our soda without using a computer in one way or another. In terms of what I would
                     <i>like</i> to do with computers -- I would have to say I would like to use computers to help make
-                    the lives of others easier.
+                    the lives of others easier -- via development or research.
                 </li>
             </ul>
         </li>
@@ -113,11 +113,11 @@
 </ol>
 <hr/>
 <footer>
-    <ul>
-        <li class="footer">Jarod Cahoon</li>
-        <li class="footer">jarod.cahoon@duke.edu</li>
-        <li class="footer"><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">Course Website</a></li>
-        <li class="footer"><a href="Aquariums.html">My Hobby Website</a></li>
+    <ul id="lastList">
+        <li><a href="https://www.github.com/JarodBryanCahoon">My GitHub</a></li>
+        <li><a href="mailto:jbc53@duke.edu" target="_top">jbc53@duke.edu</a></li>
+        <li><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">Course Website</a></li>
+        <li><a href="Aquariums.html">My Hobby Website</a></li>
     </ul>
 </footer>
 </body>
