Finished CSS and HTML for both and am satisfied

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <body>
 <header>
-    <h1 class="top">The Wizarding World of Web Development</h1>
-    <h2 class="top">Author: Jarod Cahoon</h2>
-    <h2 class="top"><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">A link to the CS290 Webpage</a></h2>
+    <h1>The Wizarding World of Web Development</h1>
+    <h2>Author: Jarod Cahoon</h2>
+    <h2><a href="https://www2.cs.duke.edu/courses/compsci290.2/spring18/">A link to the CS290 Webpage</a></h2>
 </header>
 <hr/>
 <div id="bio">
