--- a/Aquariums.html
+++ b/Aquariums.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="jelly.ico">
     <link href="aquarium.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
     <title>Stadium Arcadium</title>
