--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link href="main.css" type="text/css" rel="stylesheet">
+    <link rel="icon" href="praisethesun.ico">
     <title>The Life of Pablo</title>
 </head>
 
