--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link href="main.css" type="text/css" rel="stylesheet">
     <link rel="icon" href="praisethesun.ico">
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     <title>The Life of Pablo</title>
 </head>
 
