--- a/index.html
+++ b/index.html
@@ -113,6 +113,16 @@
         of web security.
     </li>
 </ol>
+
+<h3>Classwork</h3>
+<ol>
+    <li><ul>
+        <li><h4>Zen Garden</h4></li>
+        <li><a href="csszen/indexone.html">First</a></li>
+        <li><a href="csszen/indextwo.html">Second</a></li>
+    </ul></li>
+
+</ol>
 <hr/>
 <footer>
     <ul id="lastList">
