--- a/game/gamepage.html
+++ b/game/gamepage.html
@@ -1,10 +1,22 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <!-- always put your name in your work -->
+    <meta name="author" content="Robert C. Duvall">
+    <!-- stop the web browser from ever caching this page or its images -->
+    <meta http-equiv="Cache-Control" content="no-cache" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    <!-- support for this page -->
+    <link type="text/css" rel="stylesheet" href="gamecss.css">
+    <script src="game_script.js" async></script>
+    <title>JavaScript Pong</title>
 </head>
 <body>
+
+<h1>ENDLESS Pong!</h1>
+<canvas id="gameCanvas" width="500" height="400"></canvas>
 
 </body>
 </html>
